salesforce-migration/force-app/main/default/objects/Bouquet_Capacity_Reservation__c/Bouquet_Capacity_Reservation__c.object-meta.xml
<CustomObject>
    <label>Bouquet Capacity Reservation</label>
    <pluralLabel>Bouquet Capacity Reservations</pluralLabel>
    <nameField>
        <displayFormat>RES-{000000}</displayFormat>
        <label>Reservation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>