salesforce-migration/force-app/main/default/objects/Bouquet_Capacity_Reservation__c/fields/Bouquet_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Bouquet_Capacity__c</fullName>
    <label>Bouquet Capacity</label>
    <referenceTo>Bouquet_Capacity__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>