salesforce-migration/force-app/main/default/objects/Bouquet_Capacity_Reservation__c/fields/Bouquet_Order__c.field-meta.xml
<CustomField>
    <fullName>Bouquet_Order__c</fullName>
    <label>Bouquet Order</label>
    <referenceTo>Bouquet_Order__c</referenceTo>
    <relationshipLabel>Capacity Reservations</relationshipLabel>
    <relationshipName>Capacity_Reservations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>