salesforce-migration/force-app/main/default/objects/Bouquet_Capacity_Reservation__c/fields/Is_Manual__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual__c</fullName>
    <label>Is Manual</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>