salesforce-migration/force-app/main/default/objects/Bouquet_Capacity_Reservation__c/fields/Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Hours__c</fullName>
    <label>Planned Hours</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>